keda/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keda-ingress
  namespace: keda-knative
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls.certresolver: "letsencrypt"
spec:
  ingressClassName: traefik
  rules:
  - host: keda-vpc.kristijanboshev.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keda-service
            port:
              number: 80
